# nonebot-plugin-qq-maimaidx

./: .gitignore  README.md  pyproject.toml
nonebot_plugin_qq_maimaidx/: __init__.py  config.py  constants.py  message.py  resources.py  web.py
nonebot_plugin_qq_maimaidx/command/: __init__.py  mai_alias.py  mai_base.py  mai_score.py  mai_search.py  mai_table.py
nonebot_plugin_qq_maimaidx/commands/: __init__.py  extra.py  mai_alias.py  mai_base.py  mai_score.py  mai_search.py  mai_table.py
nonebot_plugin_qq_maimaidx/core/: maimaidx_music_info.py  maimaidx_player_score.py  search.py
nonebot_plugin_qq_maimaidx/core/database/: lxns_database.py  qq.py  qq_database.py
nonebot_plugin_qq_maimaidx/core/image/: base.py  best50.py  chart.py  info.py  score.py  table.py  tools.py  update_table.py
nonebot_plugin_qq_maimaidx/core/merge/: music_list.py  play_result.py
nonebot_plugin_qq_maimaidx/libraries/: image.py  maimaidx_api_data.py  maimaidx_best_50.py  maimaidx_database.py  maimaidx_error.py  maimaidx_model.py  maimaidx_music.py  maimaidx_music_info.py  maimaidx_player_score.py  maimaidx_update_table.py  search.py  search_df.py  search_lxns.py  tool.py
nonebot_plugin_qq_maimaidx/libraries/clients/: http.py
nonebot_plugin_qq_maimaidx/libraries/database/: lxns_database.py  qq_database.py
nonebot_plugin_qq_maimaidx/libraries/domain/: merge.py  music_list.py  play_result.py
nonebot_plugin_qq_maimaidx/libraries/image/: base.py  best50.py  chart.py  info.py  score.py  table.py  tools.py  update_table.py
nonebot_plugin_qq_maimaidx/libraries/merge/: __init__.py  (+1 more)
(+20 files in other folders)
